@@ -41,6 +41,7 @@ void bind_session_settings()
         .def_readwrite("num_want", &session_settings::num_want)
         .def_readwrite("initial_picker_threshold", &session_settings::initial_picker_threshold)
         .def_readwrite("allowed_fast_set_size", &session_settings::allowed_fast_set_size)
+        .def_readwrite("max_queued_disk_bytes", &session_settings::max_queued_disk_bytes)
         .def_readwrite("handshake_timeout", &session_settings::handshake_timeout)
 #ifndef TORRENT_DISABLE_DHT
         .def_readwrite("use_dht_as_fallback", &session_settings::use_dht_as_fallback)
@@ -82,6 +83,7 @@ void bind_session_settings()
         .def_readwrite("auto_manage_startup", &session_settings::auto_manage_startup)
         .def_readwrite("rate_limit_ip_overhead", &session_settings::rate_limit_ip_overhead)
         .def_readwrite("announce_to_all_trackers", &session_settings::announce_to_all_trackers)
+        .def_readwrite("announce_to_all_tiers", &session_settings::announce_to_all_tiers)
         .def_readwrite("prefer_udp_trackers", &session_settings::prefer_udp_trackers)
         .def_readwrite("strict_super_seeding", &session_settings::strict_super_seeding)
         .def_readwrite("seeding_piece_quota", &session_settings::seeding_piece_quota)
